--- a/style.css
+++ b/style.css
@@ -56,10 +56,6 @@ h2::after {
   margin-right: 10px;
 }
 
-/* .card input[type="radio"] {
-  accent-color: #ff6b82;
-} */
-
 .card input[type="radio"]:checked {
   outline: none;
   border: none;
@@ -248,6 +244,7 @@ button {
 .radio-container .checkmark:after {
   top: 2.3px;
   left: 2.5px;
+  margin-top: -0.1px;
   width: 11px;
   height: 11px;
   border-radius: 50%;
@@ -255,5 +252,5 @@ button {
 }
 
 .radio-container #third-checkmark:after {
-  top: 2.1px;
+  top: 2.5px !important;
 }
